# pydantic_deep_research_agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  main.py  pyproject.toml  pyrightconfig.json
src/deep_research_agent/: agents.py  graph.py  messages.py  nodes.py  prompts.py  state.py  utils.py
