[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_agent"]

[project]
name = "pydantic-deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=4.0.0",
    "pydantic-ai-slim[duckduckgo]>=0.4.7",
    "pydantic-ai",
]

[dependency-groups]
dev = [
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
]
