[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_agent"]

[project]
name = "pydantic-deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=4.0.0",
    "pydantic-ai-slim[duckduckgo]>=0.4.7",
    "pydantic-ai",
    "ddgs>=9.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
fastapi = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
graph = [
    "pillow>=11.3.0",
]
